--- a/styles/form.css
+++ b/styles/form.css
@@ -8,12 +8,49 @@
 }
 
 body {
+  background: linear-gradient(
+    135deg,
+    #f3c5ffc2,
+    #fefedfc9,
+    #8bd1ebbb,
+    #7ce2cac4
+  );
+  background-size: 400% 400%;
+  animation: gradient 20s ease infinite;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.contain-all {
   display: flex;
   align-items: center;
   justify-content: center;
   height: 100vh;
   padding: 10px;
-  background: linear-gradient(135deg, #f3c5ff, #fefedf);
+}
+
+header {
+  width: 100%;
+  height: 80px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 35px 2%;
+  position: fixed;
+}
+
+header img:hover {
+  opacity: 0.6;
 }
 
 input::placeholder {
